# video-localization

./: .env.example  .gitignore  AGENT_SKILL.md  AGENT_SKILL.zh-CN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  WORKFLOW.md  WORKFLOW.zh-CN.md  config.siliconflow.yaml  config.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: __init__.py  debug_alignment.py  doctor.py  install_agent_skill.sh  patch_segment.py  process_batch.py  process_multilingual_demo.py  process_single.py  spike_asr.py  spike_ffmpeg.py  spike_tts.py  voxcpm_http_tts.py
skills/video-localization-pipeline/: SKILL.md
skills/video-localization-pipeline/agents/: openai.yaml
skills/video-localization-pipeline/references/: commands.md  troubleshooting.md
src/: __init__.py  asr.py  compose.py  models.py  pipeline.py  subtitle.py  translate.py  tts.py  utils.py  voice_clone.py
