[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-localization"
version = "0.1.0"
description = "Multilingual video localization runtime with a built-in agent skill"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "ystyleb"}]
keywords = ["video-localization", "video-dubbing", "multilingual", "tts", "voice-cloning"]
dependencies = [
  "anthropic>=0.54.0",
  "pysubs2>=1.7.3",
  "PyYAML>=6.0.2",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.1.1",
]
dev = [
  "ruff>=0.13.0",
]

[tool.setuptools]
packages = ["src", "scripts"]

[project.urls]
Repository = "https://github.com/ystyleb/video-localization"

[tool.ruff]
line-length = 100
target-version = "py311"
